--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+h1 {
+  font-size: 30px;
+}
+
+
+li{
+  list-style: none;
+}
